--- a/templates/pack/package.json
+++ b/templates/pack/package.json
@@ -16,6 +16,8 @@
     "api-check": "^6.0.11",
     "css-loader": "^0.9.1",
     "jshint-loader": "^0.8.3",
+    "less": "^2.5.0",
+    "less-loader": "^2.2.0",
     "raw-loader": "^0.5.1",
     "style-loader": "^0.9.0",
     "typescript-loader": "^1.1.3"
