--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "gulp-rename": "^1.2.0",
     "gulp-template": "^3.0.0",
     "inquirer": "^0.8.2",
+    "sf-placeholder": "^1.0.1",
     "underscore.string": "^3.0.3"
   },
   "devDependencies": {},
