--- a/templates/package.json
+++ b/templates/package.json
@@ -5,6 +5,7 @@
   "main": "bundle.js",
   "scripts": {
     "test": "NODE_ENV=test karma start karma.conf.js",
+    "start": "webpack-dev-server --color --progress --hot --inline",
     "sf-auto-build": "webpack --progress --colors --watch --config webpack.salesforce.js",
     "sf-auto-build-deploy": "webpack --progress --colors --watch --config webpack.salesforce.deploy.js"
   },
@@ -28,7 +29,6 @@
     "karma-webpack": "^1.5.0",
     "less": "^2.5.0",
     "less-loader": "^2.2.0",
-    "mavensmate": "0.0.35-alpha1",
     "path": "^0.11.14",
     "phantomjs": "^1.9.16",
     "phantomjs-polyfill": "0.0.1",
@@ -36,6 +36,6 @@
     "style-loader": "^0.9.0",
     "typescript-loader": "^1.1.3",
     "webpack": "^1.8.9",
-    "webpack-salesforce-deploy-plugin": "^1.0.5"
+    "webpack-salesforce-deploy-plugin": "^1.0.7"
   }
 }
