--- a/templates/package.json
+++ b/templates/package.json
@@ -5,7 +5,7 @@
   "main": "bundle.js",
   "scripts": {
     "test": "NODE_ENV=test karma start karma.conf.js",
-    "start": "webpack-dev-server --color --progress --hot --inline",
+    "start": "NODE_ENV=local webpack && webpack-dev-server --color --progress --hot --inline",
     "sf-auto-build": "webpack --progress --colors --watch --config webpack.salesforce.js",
     "sf-auto-build-deploy": "webpack --progress --colors --watch --config webpack.salesforce.deploy.js"
   },
@@ -16,6 +16,7 @@
     "angular-formly": "^6.1.0",
     "angular-formly-templates-bootstrap": "^4.0.7",
     "angular-mocks": "^1.3.15",
+    "angular-ui-router": "^0.2.14",
     "angularjs": "0.0.1",
     "api-check": "^7.0.0",
     "css-loader": "^0.9.1",
